2013-09-05  Carlos O'Donell  <carlos@redhat.com>
	    Cong Wang  <amwang@redhat.com>

	* sysdeps/unix/sysv/linux/bits/in.h
	[_UAPI_LINUX_IN6_H]: Define __USE_KERNEL_IPV6_DEFS.
	* inet/netinet/in.h: Move in_addr definition and bits/in.h inclusion
	before __USE_KERNEL_IPV6_DEFS uses.
	* inet/netinet/in.h [!__USE_KERNEL_IPV6_DEFS]: Define IPPROTO_MH, and
	IPPROTO_BEETPH.
	[__USE_KERNEL_IPV6_DEFS]: Don't define any of IPPROTO_*, in6_addr,
	sockaddr_in6, or ipv6_mreq.

2013-09-05  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/power7/memrchr.S (__memrchr): Fix invalid
	memory access for final bytes in some large inputs.
	* sysdeps/powerpc/powerpc64/power7/memrchr.S (__memrchr): Likewise.

2013-09-05  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* string/test-memrchr.c: New file.
	* string/test-memrchr-ifunc.c: New file.
	* string/Makefile: Add new memrchr testcase.

2013-09-05  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/tst-fanotify.c (do_test): Skip test when
	fanotify_init returns EPERM.

2013-09-04  Joseph Myers  <joseph@codesourcery.com>

	* conform/conformtest.pl (newtoken): Treat tokens not allowed as
	errors.
	(top level): Treat second token from macro or constant entries for
	allowed headers as allowed.
	* include/complex.h: Condition internal declarations on
	[!_ISOMAC].
	* include/fenv.h: Condition include of <stdbool.h> and internal
	declarations on [!_ISOMAC].

2013-09-04  Chris Leonard  <cjl@sugarlabs,.org>

     [BZ #15923]
	* locale/iso-4217.def: Update iso-1427.def and related occurrences.

2013-09-04  Joseph Myers  <joseph@codesourcery.com>

	* configure.in (--enable-versioning): Remove configure option.
	(libc_cv_asm_symver_directive): Remove configure test.
	(libc_cv_ld_version_script_option): Likewise.
	(VERSIONING): Remove variable and AC_SUBST.
	(DO_VERSIONING): Remove AC_DEFINE.
	* configure: Regenerated.
	* config.h.in (DO_VERSIONING): Remove macro.