@@ -24,11 +24,11 @@ bench := acos acosh asin asinh atan atanh cos cosh exp log modf pow rint sin \
 	 sinh tan tanh
 
 # String function benchmarks.
-string-bench := bcopy bzero memccpy memchr memcmp memmem memmove mempcpy \
-		memset rawmemchr stpcpy stpncpy strcasecmp strcasestr strcat \
-		strchr strchrnul strcmp strcpy strcspn strlen strncasecmp \
-		strncat strncmp strncpy strnlen strpbrk strrchr strspn strstr \
-		strcpy_chk stpcpy_chk
+string-bench := bcopy bzero memccpy memchr memcmp memcpy memmem memmove \
+		mempcpy memset rawmemchr stpcpy stpncpy strcasecmp strcasestr \
+		strcat strchr strchrnul strcmp strcpy strcspn strlen \
+		strncasecmp strncat strncmp strncpy strnlen strpbrk strrchr \
+		strspn strstr strcpy_chk stpcpy_chk
 string-bench-ifunc := $(addsuffix -ifunc, $(string-bench))
 string-bench-all := $(string-bench) $(string-bench-ifunc)
 
